Fix table element being too wide

--- a/css/index.css
+++ b/css/index.css
@@ -1,5 +1,8 @@
 table {
     margin-top: 10px;
+    width: 100%;
+    margin-left: 10px;
+    margin-right: 10px;
 }
 
 table, th, td {
